static: adds solution for challenge-23

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Ninja - server</title>
 </head>
 
 <body>
 
 
-    <script src="challenge-22/challenge-22.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
