--- a/index.html
+++ b/index.html
@@ -2,14 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>JS Ninja - server</title>
+  <meta charset="utf-8">
+  <title>JS Ninja - server</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+  <div>
+    <!-- Neste caso a ação padrão do link será ignorada devido o javascript: -->
+    <a href="javascript:" onclick="boom2()" class="button button-green">Click!</a>
 
-    <script src="main.js"></script>
+    <!-- mesma coisa ocorre a seguir devido a prevenção no evento padrão do link -->
+    <a href="#" class="button button-blue">Boom!</a>
+  </div>
+  <div>
+    <h2>Eventos!</h2>
+    <div data-js="div">
+      <a href="#" data-js="link">
+        Link <span data-js="span">span</span>
+      </a>
+    </div>
+  </div>
+
+  <script src="main.js"></script>
+  <script>
+    var $a = document.querySelector('a.button.button-blue');
+    $a.addEventListener('click', boom, false)
+
+    function boom(event) {
+      event.preventDefault();
+      alert('Boom!');
+    }
+
+    function boom2() {
+      alert('Outro boom!');
+    }
+  </script>
 
 </body>
 
