static: events part II

--- a/index.html
+++ b/index.html
@@ -20,10 +20,20 @@
     <h2>Eventos!</h2>
     <div data-js="div">
       <a href="#" data-js="link">
-        Link <span data-js="span">span</span>
+        a <span data-js="span">span</span>
       </a>
     </div>
   </div>
+  <div>
+    <h2>Mais Eventos :D</h2>
+    <input type="text" data-js="input">
+    <select data-js="select">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+    </select>
+  </div>
+
 
   <script src="main.js"></script>
   <script>
